# BiSheng2025-CodeSize-aisystem-JiangnanUniversity

./: README.md
bolt/lib/Core/: BinaryBasicBlock.cpp  BinaryContext.cpp  BinaryEmitter.cpp  BinaryFunction.cpp  Relocation.cpp
bolt/lib/Passes/: BlockEdgeFrequency.cpp  CMakeLists.txt  FeatureMiner.cpp  FixRISCVCallsPass.cpp  FrameAnalysis.cpp  ReorderData.cpp  StaticBranchInfo.cpp  StaticBranchProbabilities.cpp
bolt/lib/Passes/RISCV/: RISCVAnalyze.cpp  RISCVElimUnusedFuncs.cpp  RISCVGVN.cpp  RISCVMemorySSA.cpp  RISCVReuseLUIAbsolute.cpp  RISCVReuseLUIAggressive.cpp  RISCVReuseLUIRelative.cpp  RISCVSimplifyCFG.cpp  RISCVStackPushOpt.cpp
bolt/lib/Profile/: DataAggregator.cpp
bolt/lib/Rewrite/: BinaryPassManager.cpp  JITLinkLinker.cpp  RewriteInstance.cpp
bolt/lib/Utils/: CommandLineOpts.cpp
bolt/tools/driver/: llvm-bolt.cpp
clang/: CMakeLists.txt
clang/lib/: CMakeLists.txt
clang/lib/AST/: Decl.cpp  Type.cpp  TypePrinter.cpp
clang/lib/Basic/: Targets.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGCall.cpp  CGDebugInfo.cpp  CodeGenFunction.h  CodeGenModule.cpp
clang/lib/Driver/: Driver.cpp  ToolChain.cpp
clang/lib/Frontend/: CompilerInvocation.cpp  InitPreprocessor.cpp
clang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
clang/lib/Headers/: CMakeLists.txt
clang/lib/Parse/: ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseTentative.cpp
clang/lib/Sema/: Sema.cpp  SemaChecking.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaExpr.cpp  SemaTemplateDeduction.cpp  SemaTemplateInstantiateDecl.cpp  SemaType.cpp
clang/tools/driver/: CMakeLists.txt  RISCVPreMCOptimizer.cpp  RISCVPreMCOptimizer.h  cc1as_main.cpp
clang/utils/TableGen/: ClangAttrEmitter.cpp  NeonEmitter.cpp  SveEmitter.cpp  TableGen.cpp  TableGenBackends.h
clang/www/: cxx_status.html
lld/ELF/: CMakeLists.txt  Driver.cpp  InputSection.cpp  InputSection.h  Target.h  Writer.cpp
lld/ELF/Arch/: LoongArch.cpp  RISCV.cpp
lld/packer/: build.sh  pack.py
lld/packer/payloads/: bm1.final.out  rnd.final.out
lld/packer/src/: linker.ld  loader.c  stub_min.c
lld/test/ELF/: loongarch-reloc-leb128.s
llvm/: CMakeLists.txt
llvm/cmake/modules/: CrossCompile.cmake  HandleLLVMOptions.cmake  TableGen.cmake
llvm/include/llvm-c/: DebugInfo.h
llvm/lib/: CMakeLists.txt
llvm/lib/MC/: MCExpr.cpp  (+3 more)
llvm/utils/packer/: CMakeLists.txt  pack.py
llvm/utils/packer/cpython/include/python3.8/: pyconfig.h
llvm/utils/packer/cpython/lib/pkgconfig/: python-3.8-embed.pc  python-3.8.pc
llvm/utils/packer/cpython/lib/python3.8/: _sysconfigdata__linux_x86_64-linux-gnu.py
llvm/utils/packer/cpython/lib/python3.8/config-3.8-x86_64-linux-gnu/: Makefile  python-config.py
llvm/utils/packer/perfs/: bm1.out.perf.data  bm2.out.perf.data  bm6.out.perf.data  huffbench.perf.data  qrduino.perf.data  rnd.out.perf.data  sglib-combined.perf.data
llvm/utils/packer/src/: linker.ld  linkerhigh.ld  loader.c
(+199 files in other folders)
